changes today srv

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,6 +1,5 @@
 .headroom-wrapper{
-  height: 56px !important;
-  background-color: blue;
+  background-color: #0a2f5d;
 
   .headroom{
     position: fixed !important;
