--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,26 +1,44 @@
-.headroom-wrapper{
+.top-bar {
+  height: 43px;
   background-color: #0a2f5d;
+  color: #fff;
+  position: relative;
 
-  .headroom{
-    position: fixed !important;
-    -webkit-transform: translateY(0) !important;
-    transform: translateY(0) !important;
+  h1 {
+    display: inline-block;
+      line-height: 43px;
+      margin-left: 47px;
+      font-size: 15px;
+  }
+  .main-menu, .settings-btn, .notifications-btn {
+    width: 43px;
+    height: 43px;      
+    background-size: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .settings-btn {
+    background: url(../images/settings_icon.png) no-repeat center;
+    background-size: 50%;
+    right: 52px;
+    left: inherit;
+  }
+  .notifications-btn {
+    background: url(../images/alarm_icon.png) no-repeat center;
+    background-size: 50%;
+    right: 12px;
+    left: inherit;
 
-    span{
-      color: #fff;
-      font-size: 12px;
-      font-weight: normal;
-    }
-    .icon{
-      background-repeat: no-repeat;
-      background-position: center;
-      height: 24px;
-      width: 24px;
-      display: block;
-    }
-    .icon.header-bell-icon{
-      background-image: url('../images/notify-bell.svg');
-      background-size: 21.1px 24px;
+    span {
+      font-size: 10px;
+        background: red;
+        padding: 2px;
+        border: 1px solid #fff;
+        border-radius: 20px;
+        display: inline-block;
+        margin-left: 22px;
+        margin-top: 6px;
     }
   }
 }
