--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -42,4 +42,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+html,body{
+	margin: 0;
+	padding: 0;	
+	width : 100%;
+	height : 100%;
+	overflow-y: hidden;	
+}
 /* Base Application Styles */
