--- a/src/styles/HtabContent.scss
+++ b/src/styles/HtabContent.scss
@@ -6,7 +6,7 @@
 }
 .main-content {
 	position: relative;
-	height: 815px;
+    height: 90%;
 	.overflow-vertical {
 		position: absolute;
 	    width: 97%;
