--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -1,4 +1,4 @@
-.rrc-app, .app-container  {
+.rrc-app, .app-container {
 	margin: 0;
 	padding: 0;	
 	width : 100%;
@@ -6,5 +6,8 @@
 	.help-space {
 		height: 10px;
 		background: #fff;
-	}  
+	} 
+	.outer-container, .wrapper-page{
+		height : 100%;
+	}
 }
