--- a/src/styles/HtabContent.scss
+++ b/src/styles/HtabContent.scss
@@ -6,7 +6,7 @@
 }
 .main-content {
 	position: relative;
-    height: 90%;
+    height: calc(100% - 32px);
 	.overflow-vertical {
 	    width: 97%;
 	    height: 97%;
