made test cases runnable

--- a/src/styles/HomeTabs.scss
+++ b/src/styles/HomeTabs.scss
@@ -6,12 +6,12 @@
 .top-tabs {
 	height: 32px;
 	.swiper-hldr {
-		height: 30px;
+		height: 32px;
 	    border-top: 1px solid #e0e0e0;
 	    border-bottom: 1px solid #e0e0e0;
 	}
 	.swiper-container-outer {
-		padding: auto 30px;
+		margin: auto 30px;
 		position: relative;
 	}
 	.swiper-container {
