--- a/src/styles/BrMenu.scss
+++ b/src/styles/BrMenu.scss
@@ -75,8 +75,7 @@
       {
         padding-left: 0;
         list-style: none;
-        width: 88%;
-
+        margin-right: 35px;
       }
       ul.slide-menu-links li a {
         display: block;
@@ -90,7 +89,7 @@
       ul.slide-menu-links li a.lang {
         background: url(../images/chevron_down.png) no-repeat;
           background-size: 16px;
-          background-position: 95%;
+          background-position: right 12px center;
       }
 
       ul.slide-menu-links.menu-logout a {
@@ -99,12 +98,18 @@
         color: #002b5e;
         background: url(../images/logout_icon.png) no-repeat;
           background-size: 25px;
-          background-position: 98%;
+          background-position: right 5px center;
       }      
 
     }    
   }
 }
+
+.marg-b-30 {
+  margin-bottom: 30px;
+}
+
+
 /*Profile details start*/
 .profile-details-wrapper {
   background: #cdcdcd;
@@ -119,8 +124,8 @@
       color: #053c6d;
       
       background: url(../images/arrow_right_dark.png) no-repeat;
-        background-size: 10px;
-        background-position: 90%;
+      background-size: 10px;
+      background-position: right 30px center;
       .profile-pic {
         width: 50px;
           height: 50px;
