--- a/src/styles/HtabContent.scss
+++ b/src/styles/HtabContent.scss
@@ -8,15 +8,15 @@
 	position: relative;
     height: calc(100% - 32px);
 	.overflow-vertical {
-	    width: 97%;
-	    height: 97%;
+	    /*width: 97%;
+	    padding: 1.5%;*/
+	    height: 100%;
 	    overflow-y: auto;
-	    padding: 1.5%;
 		ul.events {
 			li {
 				background: #fff url(../images/chevron_sm.png) no-repeat;
 			    background-size: 8px;
-			    background-position: 95%;
+			    background-position: right 18px center;
 				padding: 10px;
 				margin-bottom: 10px;
 				border: 1px solid rgba(50, 128, 169, 0.3);
@@ -32,11 +32,10 @@
 				    position: relative;
 				}
 				.pod-bg-image {
-					content: '';
 				    display: block;
 				    position: absolute;
-				    top: 3px;
-				    left: 0;
+				    top: 13px;
+				    left: 10px;
 				    width: 25px;
 				    height: 25px;
 				    background: url(../images/calendar_icon.png);
@@ -48,6 +47,7 @@
 					margin-bottom: 15px;
 				    color: #000;
 					border-bottom: 1px solid rgba(50, 128, 169, 0.3);
+					padding-right: 25px;
 				}
 				.post-name {
 					font-size: 12px;
@@ -74,12 +74,11 @@
 					}				    
 				}
 				.register-btn .p-before, .register-btn.active .p-before {
-					content: '';
 				    display: block;
 				    position: absolute;
 				    top: 3px;
 				    left: 0;
-				    width: 20px;
+				    width: 25px;
 				    height: 22px;
 				    background: url(../images/register_icon.png);
 					background-size: cover;
