ui font-weights

--- a/src/styles/AlertTabs.scss
+++ b/src/styles/AlertTabs.scss
@@ -7,14 +7,15 @@
 }
 .nav-tabs.nav-justified.alerts-tab > li {
 	display: table-cell;
-    width: 1%;
+    width: 1%;    
 }
 .nav-tabs.nav-justified.alerts-tab > li a {
+	font-size: 12px;
+	font-weight: 400;	
 	border: none;
 	border-radius: 0;
     margin-bottom: 0;
 	border-right: 1px solid #e0e0e0;
-	font-size: 12px;
 	color: #0a2f5d;
 	padding: 12px 15px;
 }
@@ -35,16 +36,19 @@
     right: 0;
     padding: 6px;
     color: #fff;
-    font-size: 12px;
+	font-size: 12px;
+	font-weight: 300;
     background: #2c9dc0;
 }
 .today-content h3, .today-content p {
 	font-size: 12px;
+	font-weight: 400;
 	color: #0a2f5d;
 	padding: 12px 0;
 	border-bottom: 1px solid rgba(50, 128, 169, 0.3);
 }
 .today-content p {
+	font-weight: 300;	
 	color: #9b9b9b;
 }
 .today-content p.border-none {
