--- a/src/styles/HomeTabs.scss
+++ b/src/styles/HomeTabs.scss
@@ -20,6 +20,7 @@
 				.swiper-slide {
 					text-align: center;
 					font-size: 12px;
+					font-weight: 300;
 					background: #fff;
 					color: #0a2f5d;
 					/* Center slide text vertically */
@@ -51,7 +52,7 @@
     position: absolute !important;
     width: 30px !important;
     height: 30px !important;
-    z-index: 10 !important;
+    z-index: 1 !important;
     cursor: pointer !important;
 	background: #fff !important;
 	top: 0 !important;
