move swiper to postion

--- a/src/styles/HomeTabs.scss
+++ b/src/styles/HomeTabs.scss
@@ -36,7 +36,7 @@
 					-webkit-align-items: center;
 					align-items: center;
 				}
-				.swiper-slide.active {
+				.swiper-slide-active {
 					background: #0a2f5d;
 					color: #fff;
 				}			
