--- a/src/styles/HtabContent.scss
+++ b/src/styles/HtabContent.scss
@@ -284,3 +284,10 @@ ul.events {
 	background: #0a2f5d;
 	color: #fff;
 }
+.server-data{
+	font-size: 12px;
+    color: #323232;
+    line-height: 18px;
+    margin-bottom: 5px;
+    color: #727272;
+}
